// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component aligned 1`] = `
.c0 {
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: right;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 2.25rem;
  line-height: 2.75rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="xxxxlarge"
>
  Hello
</code>
`;

exports[`A Code component weight 1`] = `
.c0 {
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;
